modflow_sources += files(
  'gwf.f90',
  'gwf-api.f90',
  'gwf-buy.f90',
  'gwf-chd.f90',
  'gwf-csub.f90',
  'gwf-drn.f90',
  'gwf-evt.f90',
  'gwf-ghb.f90',
  'gwf-hfb.f90',
  'gwf-lak.f90',
  'gwf-maw.f90',
  'gwf-mvr.f90',
  'gwf-npf.f90',
  'gwf-obs.f90',
  'gwf-oc.f90',
  'gwf-rch.f90',
  'gwf-riv.f90',
  'gwf-sfr.f90',
  'gwf-sto.f90',
  'TvBase.f90',
  'gwf-tvk.f90',
  'gwf-tvs.f90',
  'gwf-uzf.f90',
  'gwf-vsc.f90',
  'gwf-wel.f90',
  'exg-gwfgwf.f90',
  'VirtualGwfExchange.f90',
  'VirtualGwfModel.f90',
  'GwfExchangeMover.f90',
  'GwfGwfConnection.f90',
  'GwfInterfaceModel.f90',
  'GwfStorageUtils.f90',
  'GwfMvrPeriodData.f90',
  'GwfVscInputData.f90',
  'GwfBuyInputData.f90',
  'GwfNpfOptions.f90'
)