modflow_sources += files(
  'gwt.f90',
  'gwt-cnc.f90',
  'gwt-dsp.f90',
  'gwt-ist.f90',
  'gwt-lkt.f90',
  'gwt-mst.f90',
  'gwt-mwt.f90',
  'gwt-sft.f90',
  'gwt-src.f90',
  'gwt-uzt.f90',
  'exg-gwfgwt.f90',
  'exg-gwtgwt.f90',
  'VirtualGwtExchange.f90',
  'VirtualGwtModel.f90',
  'VirtualGwtExchange.f90',
  'VirtualGwtModel.f90',
  'GwtGwtConnection.f90',
  'GwtInterfaceModel.f90',
  'GwtDspOptions.f90',
)